<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/outer_layout" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_alignParentTop="true"
		android:layout_centerInParent="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@android:style/ButtonBar">
		<TextView android:text="@string/selected_printer"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal" />
		<TextView android:id="@+id/printer_name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:layout_centerInParent="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@android:style/ButtonBar">
		<Button android:id="@+id/printbutton" android:layout_width="0dip"
			android:layout_height="fill_parent" android:layout_weight="1"
			android:text="@string/print_button_text" />
		<Button android:id="@+id/selectprinterbutton"
			android:layout_width="0dip" android:layout_height="fill_parent"
			android:layout_weight="1" android:text="@string/select_printer_button_text" />
	</LinearLayout>
</RelativeLayout>
