<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@drawable/calendar_login_bg" 
  android:layout_height="300dp" 
  android:layout_width="400dp" 
  android:id="@+id/rlTimeDlgMain">
  
<RelativeLayout 
android:layout_height="wrap_content" 
android:layout_width="fill_parent" 
android:id="@+id/rlTimePickerMain" 
android:gravity="center" 
android:layout_marginTop="50dp">

<HpPickerButton 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/pickHour" />

<TextView 
android:layout_toRightOf="@+id/pickHour" 
android:layout_height="wrap_content" 
android:id="@+id/TextView01" 
android:text="@string/:" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white" 
android:layout_centerVertical="true" 
android:layout_width="20dp" 
android:gravity="center" 
android:textSize="24sp"/>

<HpPickerButton 
android:layout_toRightOf="@+id/TextView01" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:layout_centerVertical="true" 
android:id="@+id/pickMinute"/>

<HpToggleGroup 
android:layout_toRightOf="@+id/pickMinute" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:layout_centerVertical="true" 
android:paddingLeft="15dp" android:id="@+id/tgAMPMMain">

<HpToggleButton 
android:id="@+id/toggleBtnAM"
android:layout_height="wrap_content" 
android:layout_width="wrap_content"
android:checked="true" 
style="@android:style/HP.Button" 
android:text="@string/am" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white"/>
		
<HpToggleButton 
android:id="@+id/toggleBtnPM"
android:layout_height="wrap_content" 
android:layout_width="wrap_content"
android:layout_toRightOf="@+id/toggleBtnAM"
style="@android:style/HP.Button" 
android:text="@string/pm" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white"/>

</HpToggleGroup>

</RelativeLayout>


<ImageView 
android:layout_below="@+id/rlTimePickerMain" 
android:id="@+id/ivLine" 
android:layout_height="2dp" 
android:layout_width="fill_parent" 
android:layout_marginTop="30dp" 
android:layout_marginLeft="20dp" 
android:layout_marginRight="20dp" 
android:src="@android:color/HP.Color.Gray4"/>

<RelativeLayout 
android:layout_below="@+id/ivLine" 
android:layout_width="fill_parent" 
android:layout_height="fill_parent" 
android:id="@+id/rlTimeBtnMain" 
android:gravity="center">

<Button 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
style="@android:style/HP.Button" 
android:text="@string/cancel" 
android:id="@+id/btnTimeCancel"/>

<Button 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:id="@+id/btnTimeOK" 
android:text="@string/ok" 
style="@android:style/HP.Button.Action" 
android:layout_toRightOf="@+id/btnTimeCancel"/>
</RelativeLayout>
</RelativeLayout>
