<RelativeLayout 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:background="@drawable/calendar_login_bg" 
android:layout_gravity="center" 
android:id="@+id/rlLogoutMain">

<RelativeLayout 
android:layout_centerHorizontal="true" 
android:layout_width="fill_parent" 
android:layout_height="50dip" 
android:layout_marginTop="20dip" android:id="@+id/rlLogoutBtn" android:paddingLeft="20dip" android:paddingRight="20dip">

<TextView android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:background="@drawable/ok_btn" 
android:gravity="center" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white" 
android:textStyle="bold" 
android:textSize="18sp" 
android:layout_marginLeft="25dip" android:layout_alignParentRight="true" android:text="@string/Yes" android:id="@+id/tvLogoutBtnYes"/>

<TextView 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:background="@drawable/ok_btn" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white" 
android:textSize="18sp" 
android:textStyle="bold" 
android:gravity="center" android:layout_gravity="right" android:id="@+id/tvLogoutBtnNo" android:text="@string/No"/>

</RelativeLayout>

<ImageView 
android:id="@+id/ivLine"
android:layout_height="2dip" 
android:src="@android:color/HP.Color.Gray3" 
android:layout_marginTop="70dip" 
android:layout_marginLeft="30dip" android:layout_width="745dip"/>

<TextView 
android:layout_width="wrap_content" 
android:layout_centerHorizontal="true" 
android:layout_height="wrap_content" 
android:id="@+id/tvLogoutInfo" 
android:layout_centerVertical="true" 
android:paddingBottom="30dip" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white" 
android:textStyle="normal" 
android:textSize="24sp" 
android:text="@string/LogoutInfo"/>

</RelativeLayout>
