

<RelativeLayout 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:id="@+id/rlNewEventMain" 
android:layout_width="fill_parent" 
android:background="@android:color/black" 
android:scrollbars="vertical" 
android:scrollbarStyle="insideOverlay" 
android:layout_height="fill_parent">

<TextView android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:id="@+id/tvNewEventTitle" 
android:text="@string/title" 
android:textStyle="bold" 
android:paddingLeft="30dip" 
android:textSize="@android:dimen/HP.Type.18" 
android:paddingTop="15dip" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white"/>

<EditText
android:id="@+id/etNewEventTitle" 
android:layout_width="610dip" 
android:layout_marginLeft="150dip" 
android:paddingLeft="10dip" 
android:imeOptions="actionNext|flagNoExtractUi"
android:layout_marginTop="5dip"
style="@android:style/HP.EditText" 
android:layout_height="wrap_content" 
android:textSize="@android:dimen/HP.Type.18" 
android:inputType="textEmailAddress" 
android:maxLength="255" 
android:maxLines="1"/>


<ImageView 
android:id="@+id/ivLine"
android:layout_below="@+id/etNewEventTitle" 
android:layout_height="wrap_content" 
android:src="@drawable/h_line800" 
android:layout_centerHorizontal="true" 
android:layout_width="fill_parent" 
android:layout_marginLeft="25dip" 
android:layout_marginRight="25dip" 
android:layout_marginTop="5dip" />

<TextView 
android:id="@+id/tvNewEventWhen" 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine" 
android:layout_height="wrap_content" 
android:paddingLeft="30dip" 
android:text="@string/when" 
android:textStyle="bold" 
android:textSize="@android:dimen/HP.Type.18" 
android:paddingTop="10dip" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white"/>

<TextView 
android:id="@+id/tvNewEventFromDate" 
android:layout_below="@+id/ivLine" 
android:layout_height="40dip" 
android:textSize="@android:dimen/HP.Type.18" 
android:textStyle="bold" 
android:layout_marginLeft="150dip" 
android:layout_width="127dip" 
android:background="@drawable/content_textfield_h127x40_01" 
android:layout_marginTop="5dip" 
android:textColor="@android:color/black" 
android:textColorHighlight="@android:color/black" android:gravity="center"/>

<Button 
android:id="@+id/btnNewEventTimeFrom" 
android:layout_below="@+id/ivLine" 
android:layout_toRightOf="@+id/tvNewEventFromDate" 
android:layout_width="120dp"
style="@android:style/HP.Button" 
android:layout_marginLeft="10dp" 
android:gravity="center" 
android:layout_marginTop="3dp" 
android:layout_height="44dp" android:textSize="@android:dimen/HP.Type.18" android:textStyle="bold"/>

<TextView 
android:id="@+id/tvNewEventTo" 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine" 
android:layout_toRightOf="@+id/tvNewEventFromDate" 
android:layout_height="wrap_content" 
android:text="@string/to" 
android:textSize="18sp" 
android:textStyle="bold" 
android:layout_marginLeft="135dip" 
android:gravity="center_vertical|center_horizontal" 
android:paddingTop="10dip" 
android:textColor="@android:color/white" 
android:textColorHighlight="@android:color/white" 
android:paddingRight="6dip"/>

<TextView 
android:layout_below="@+id/ivLine" 
android:layout_toRightOf="@+id/tvNewEventTo" 
android:id="@+id/tvNewEventToDate" 
android:layout_height="40dip" 
android:textSize="@android:dimen/HP.Type.18" 
android:textStyle="bold" 
android:layout_width="127dip" 
android:background="@drawable/content_textfield_h127x40_01" 
android:layout_marginTop="5dip" 
android:textColor="@android:color/black" 
android:textColorHighlight="@android:color/black" android:gravity="center"/>

<Button 
android:id="@+id/btnNewEventTimeTo" 
android:layout_below="@+id/ivLine" 
android:layout_toRightOf="@+id/tvNewEventToDate" 
android:layout_width="120dp"
style="@android:style/HP.Button" 
android:layout_marginLeft="10dp" 
android:gravity="center" 
android:layout_marginTop="3dp" 
android:layout_height="44dp" android:textSize="@android:dimen/HP.Type.18" android:textStyle="bold"/>

<ImageView 
android:id="@+id/ivNewEventAllDayChkBox" 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine" 
android:layout_height="wrap_content" 
android:src="@drawable/checkbox" 
android:layout_toRightOf="@+id/tvNewEventToDate" 
android:layout_marginLeft="140dip" 
android:layout_marginTop="10dip"/>

<TextView 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine" 
android:layout_toRightOf="@+id/ivNewEventAllDayChkBox" 
android:layout_height="wrap_content" 
android:id="@+id/tvNewEventAllChkBox" 
android:text="@string/all_day" 
android:layout_marginLeft="5dip" 
android:textColor="@android:color/HP.Color.Gray1" 
android:textSize="@android:dimen/HP.Type.14" 
android:layout_marginTop="15dip"/>

<ImageView 
android:id="@+id/ivLine02"
android:layout_width="wrap_content" 
android:layout_below="@+id/tvNewEventFromDate" 
android:layout_height="wrap_content" 
android:src="@drawable/h_line800" 
android:layout_marginLeft="25dip" 
android:layout_marginRight="25dip" 
android:layout_marginTop="5dip"/>


<TextView 
android:layout_below="@+id/ivLine02" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/tvNewEventWhere" 
android:text="@string/where" 
android:paddingLeft="30dip" 
android:textStyle="bold" 
android:paddingBottom="5dp" 
android:textSize="@android:dimen/HP.Type.18" 
android:paddingTop="15dip" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white"/>

<EditText
android:layout_below="@+id/ivLine02" 
android:id="@+id/etNewEventWhere" 
android:maxLength="255" 
android:textSize="@android:dimen/HP.Type.18" 
android:layout_width="610dip" 
android:layout_marginLeft="150dip" 
android:paddingLeft="10dip" 
android:imeOptions="actionNext|flagNoExtractUi"
android:layout_marginTop="5dip" 
android:maxLines="1" 
android:inputType="textEmailAddress" 
style="@android:style/HP.EditText" 
android:layout_height="wrap_content"/>


<ImageView 
android:id="@+id/ivLine03" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:src="@drawable/h_line800" 
android:layout_marginLeft="25dip" 
android:layout_marginRight="25dip" 
android:layout_marginTop="5dip" 
android:layout_below="@+id/etNewEventWhere"/>

<TextView 
android:id="@+id/tvNewEventRecurrence"
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:layout_below="@+id/ivLine03" 
android:paddingLeft="30dip" 
android:textStyle="bold" 
android:text="@string/recurrence" 
android:textSize="@android:dimen/HP.Type.18" 
android:paddingTop="8dip" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white"/>

<ImageView 
android:id="@+id/ivLine04" 
android:layout_below="@+id/tvNewEventRecurrence" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:src="@drawable/h_line800" 
android:layout_marginLeft="25dip" 
android:layout_marginRight="25dip" 
android:layout_marginTop="10dip"/>

<TextView 
android:layout_below="@+id/ivLine04" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/tvNewEventDescription" 
android:text="@string/description" 
android:paddingLeft="30dip" 
android:textStyle="bold" 
android:paddingBottom="5dp" 
android:textSize="@android:dimen/HP.Type.18" 
android:paddingTop="15dip" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white"/>

<ImageView 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/ivLine05" 
android:src="@drawable/h_line800" 
android:layout_marginLeft="25dip" 
android:layout_marginRight="25dip" 
android:layout_below="@+id/etNewEventDescription" 
android:layout_marginTop="5dip"/>

<TextView 
android:layout_below="@+id/ivLine05" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/tvNewEventRemind" 
android:text="@string/reminder" 
android:textStyle="bold" 
android:paddingLeft="30dip" 
android:textSize="@android:dimen/HP.Type.18" 
android:paddingTop="7dip" 
android:paddingBottom="8dip" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white"/>

<EditText
android:layout_below="@+id/ivLine04" 
android:id="@+id/etNewEventDescription" 
android:maxLength="255" 
android:textSize="@android:dimen/HP.Type.18" 
android:layout_width="610dip" 
android:layout_marginLeft="150dip" 
android:paddingLeft="10dip" 
android:imeOptions="actionDone|flagNoExtractUi"
android:layout_marginTop="5dip" 
android:inputType="textEmailAddress" 
android:maxLines="1" 
style="@android:style/HP.EditText" 
android:layout_height="wrap_content"/>


<!--
spinner list 
 -->
 
<RelativeLayout 
android:id="@+id/rlNewEventRecurrence" 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine03" 
android:layout_height="wrap_content" 
android:layout_marginTop="5dip" 
android:layout_marginLeft="150dip">
</RelativeLayout>

<RelativeLayout 
android:id="@+id/rlNewEventReminder" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:layout_alignBottom="@+id/tvNewEventRemind" 
android:layout_marginLeft="150dip">
</RelativeLayout>

<!-- 
<RelativeLayout 
android:id="@+id/rlNewEventFromTime" 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine" 
android:layout_height="wrap_content" 
android:layout_toRightOf="@+id/tvNewEventFromDate"
android:layout_marginTop="5dip" 
android:layout_marginLeft="5dip" >
</RelativeLayout>

<RelativeLayout 
android:id="@+id/rlNewEventToTime" 
android:layout_width="wrap_content" 
android:layout_below="@+id/ivLine" 
android:layout_toRightOf="@+id/tvNewEventToDate" 
android:layout_height="wrap_content" 
android:layout_marginTop="5dip" 
android:layout_marginLeft="5dip" >
</RelativeLayout>
-->




</RelativeLayout>
 

